force-app/main/default/objects/SLA_Priority__mdt/SLA_Priority__mdt.object-meta.xml
<CustomObject>
    <description>Defines SLA thresholds by priority.</description>
    <label>SLA Priority</label>
    <pluralLabel>SLA Priorities</pluralLabel>
</CustomObject>