force-app/main/default/objects/SLA_Priority__mdt/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>