force-app/main/default/objects/SLA_Priority__mdt/fields/Escalation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Hours__c</fullName>
    <label>Escalation Hours</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>