force-app/main/default/objects/SLA_Priority__mdt/fields/Priority_Name__c.field-meta.xml
<CustomField>
    <fullName>Priority_Name__c</fullName>
    <label>Priority Name</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>