force-app/main/default/objects/SLA_Priority__mdt/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>